# shravan

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs
scripts/: bench-history.sh
src/: aac.rs  aiff.rs  alac.rs  codec.rs  dither.rs  error.rs  fft.rs  flac.rs  format.rs  lib.rs  mp3.rs  ogg.rs  opus.rs  pcm.rs  resample.rs  stream.rs  tag.rs  wav.rs
src/simd/: aarch64.rs  mod.rs  x86.rs
supply-chain/: audits.toml  config.toml
tests/: integration.rs  reference_impl.rs
tests/reference/: ref_44100_16bit_mono.aiff  ref_44100_16bit_mono.flac  ref_48000_24bit_mono.flac
