[package]
name = "shravan"
version = "1.0.1"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "shravan — Audio codecs: WAV, FLAC, AIFF, Ogg/Opus, AAC, ALAC, MP3, PCM conversion, and resampling"
homepage = "https://github.com/MacCracken/shravan"
repository = "https://github.com/MacCracken/shravan"
readme = "README.md"
documentation = "https://docs.rs/shravan"
keywords = ["audio", "codec", "wav", "flac", "aac"]
categories = ["multimedia::audio", "encoding"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
libm = "0.2"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
symphonia-codec-aac = { version = "0.5.5", optional = true }
symphonia-core = { version = "0.5.5", optional = true }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[features]
default = ["std", "wav", "flac", "pcm"]
full = ["std", "wav", "flac", "pcm", "resample", "tag", "ogg", "aiff", "mp3", "opus", "aac", "alac", "simd", "dither", "streaming", "logging"]
std = ["serde/std", "thiserror/std"]
wav = []
flac = []
pcm = []
resample = []
tag = []
ogg = []
aiff = []
mp3 = []
opus = ["ogg"]
aac = ["std", "dep:symphonia-core", "dep:symphonia-codec-aac"]
alac = []
simd = ["std"]
dither = []
streaming = ["std"]
logging = ["dep:tracing"]

[[bench]]
name = "benchmarks"
harness = false
